# grpc_example

./: CMakeLists.txt  client.cc  server.cc  test.proto
gen_code/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h
